--- a/4-DOM-pig-game/starter/style.css
+++ b/4-DOM-pig-game/starter/style.css
@@ -9,6 +9,25 @@
     
 }
 
+.final-score {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 520px;
+    color: #555;
+    font-size: 18px;
+    font-family: 'Lato';
+    text-align: center;
+    padding: 10px;
+    width: 160px;
+    text-transform: uppercase;
+}
+
+#dice1 { top: 120px; }
+#dice2 { top: 250px; }
+
+.final-score:focus { outline: none; }
+
 .clearfix::after {
     content: "";
     display: table;
